Fixed checkbox alignment

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/users/roles-and-permissions/roles-and-permissions.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/users/roles-and-permissions/roles-and-permissions.component.scss
@@ -74,3 +74,8 @@ h3 {
 .roleDescription {
   font-size: smaller;
 }
+
+.permissions {
+  display: flex;
+  flex-direction: column;
+}
